  reported by AngryWolf
- Fixed a bunch of oper fdlist bugs regarding locops
- Fixed a couple of minor typos in the source
- Removed the old configure checks for pthreads
- Added configure/Config stuff for libcurl
- Added a ./curlinstall script to help with installing curl (Read INSTALL.REMOTEINC for
  more information).
- Added code to make remote includes able to use SSL (HTTPS/FTPS) if SSL support is enabled
- Fixed a remote include bug with rehashing when no remote includes were loaded
- Fixed a remote include compile bug on Linux regarding url.h
- Fixed a remote include compile bug regarding ares (#0001458) reported by mustapha88
- Made the tmp/ directory cleaned up better
- Added some additional warnings for insane large values for allow::maxperip, and class::*
  stuff. Reported by Erik_Rana (#0001463).
- Fixed a bug with /rehash and cached remote includes reported by mustapha88
- internal: Modified TKL system (getting ready for anti-spam system):
  Instead of 1 big list of *lines, it's now an array to easily distinct between types.
  Also made tk->usermask static (USERLEN+2) instead of dynamic.
  These changes should give enough speed improvement to make the new anti-spam/anti-ads
  feature fast enough.
- Updated the TRE library source to 0.6.3 (not yet used)
- Updated the win32 TRE lib/dll to 0.6.4
- Updated the TRE library source to 0.6.4 (yup, a release right after I do the last upgrade!)
- Removed all the FLAGS_TS8 stuff (no longer used)
- Fixed some operoverride bugs regarding halfops found by Sinus (#0001465)
- Cleaned up the /kick code to make it a bit faster
- Reactivated TRE compile
- Finally made Unreal use TRE under *nix
- Fixed a compile problem reported by ace (#0001474)
- Added an EXTBAN 005 token (see doc/technical/005.txt for info)
- Fixed a bug with the dynamic umode and cmode systems
- Made CmodeAdd return MODERR_EXISTS if the mode already exists
- Fixes for TRE under win32