@@ -392,6 +392,9 @@ void Unload_all_loaded_modules(void)
 			else if (objs->type == MOBJ_CMDOVERRIDE) {
 				CmdoverrideDel(objs->object.cmdoverride);
 			}
+			else if (objs->type == MOBJ_EXTBAN) {
+				ExtbanDel(objs->object.extban);
+			}
 		}
 		for (child = mi->children; child; child = childnext)
 		{
@@ -445,6 +448,9 @@ void Unload_all_testing_modules(void)
 			}
 			else if (objs->type == MOBJ_CMDOVERRIDE) {
 				CmdoverrideDel(objs->object.cmdoverride);
+			}
+			else if (objs->type == MOBJ_EXTBAN) {
+				ExtbanDel(objs->object.extban);
 			}
 		}
 		for (child = mi->children; child; child = childnext)
@@ -505,6 +511,9 @@ int    Module_free(Module *mod)
 		}
 		else if (objs->type == MOBJ_CMDOVERRIDE) {
 			CmdoverrideDel(objs->object.cmdoverride);
+		}
+		else if (objs->type == MOBJ_EXTBAN) {
+			ExtbanDel(objs->object.extban);
 		}
 	}
 	for (p = Modules; p; p = p->next)
