@@ -2701,3 +2701,5 @@ seen. gmtime warning still there
 - Fixed a bug with the dynamic umode and cmode systems
 - Made CmodeAdd return MODERR_EXISTS if the mode already exists
 - Fixes for TRE under win32
+- Made Extbans use the module object system
+
